# side-projects

./: .editorconfig  .gitignore  README.md  gradle.properties  local.properties  settings.gradle
.github/workflows/: get-a-token.yaml  misc_scratch_learning_learning-building-go-applications_learning-go-application.yaml
buildPlugins/: build.gradle
cloud/aws/fargate-example/: main.tf
cloud/aws/lambda-runtime-client/: .editorconfig  README.md  jasmine.json  package-lock.json  package.json
cloud/aws/lookup-ami-ids/: main.tf
cloud/aws/s3-presigned/: build.gradle
cloud/oci/oci-helpers/: build.gradle
cloud/tf/argument-names-reproducer-IJPL-65355/: main.tf
cloud/tf/basic-plugin/: README.md
cloud/tf/provisioner-data/: build.gradle
cloud/util/area/: README.md  include.gradle
cloud/util/client/: README.md
cloud/util/ip-address/: README.md
cloud/util/ipam/ipam-simple/: .gitignore  pyproject.toml
cloud/util/ipam/ipam-simple/ipam_simple/: __init__.py
cloud/util/ipam/ipam-simple/test/: ipam_simple_test.py
cloud/util/logging-proxy/: README.md
cloud/util/nexus-guide/: .gitignore  README.txt  nexus.Dockerfile  reset.sh  start.sh
cloud/util/nexus-guide/contents/python/app1/: install.sh  pyproject.toml
cloud/util/nexus-guide/contents/python/app1/app1/: app.py
cloud/util/nexus-guide/contents/python/module1/: README.md  publish.sh  pyproject.toml
cloud/util/nexus-guide/contents/python/module1/module1/: __init__.py
cloud/util/observability/: .editorconfig
cloud/util/packer-tool/: build.gradle
cloud/util/registry/: .gitignore  Makefile  README.md  compose.yaml  creds.sh
cloud/util/registry-init/: README.md  build.gradle
cloud/util/s3-api-emulator/: build.gradle
cloud/util/tracing-guide/: build.gradle
cloud/util/ubuntu-updated/: Dockerfile  build.sh
cloud/util/util-acme/: README.md
cloud/vm/lxc/: README.md  ubuntu.sh  windows.sh
cloud/vm/qemu-cloud-init/: Makefile  README.md  create-user-data.sh  vm_amd64.mk  vm_arm.mk  vm_arm64.mk  vm_riscv64.mk
gradle/wrapper/: gradle-wrapper.properties
leet-code/amazon/lp/: notes.md
leet-code/amazon/traffic-light/: build.gradle
leet-code/benchmarking/: build.gradle
leet-code/distributed/distributed-merge-sort/: build.gradle
leet-code/leet-code-cpp/cheezip/: CMakeLists.txt  Makefile  README.md  choose_zstd.cpp
leet-code/tarjans-scc/: README.md  build.gradle
lib/picocli-lib/: build.gradle
misc/auth-scratch/: README.md
misc/auth-scratch/simple/: README.md
misc/azure-things/azure-data-things/container_test/: container_test.py  pyproject.toml
misc/citation-management/: .editorconfig  .gitignore  app.js  index.html  knexfile.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
misc/copy-token/: build.gradle
misc/docker-client/: .editorconfig  generate.py  pyproject.toml
misc/docker-client/docker_client/: __init__.py
misc/docker-client/docker_client/clients/: __init__.py  clients.py  requests_client.py
misc/docker-client/docker_client/shims/: openapi_generator_rest.py
misc/docker-client/tests/: scratch_work.py
misc/does_it_have_pep_735_groups/: .gitignore  ignore_properties.py  script.py
misc/executable-jar-file-trick/: build.gradle
misc/offline-packaging/: rustup.py
misc/projects/json-converters/: README.md  pyproject.toml
misc/projects/json-converters/json_conv/: __init__.py  cli.py
misc/projects/json-converters/tests/: test_cli.py
misc/projects/packaging/offline-packaging/pyproject/: build.sh  pyproject.toml
misc/projects/packaging/python-image-builder/: pyproject.toml
misc/projects/packaging/python-image-builder/python_image_builder/: builder.py
misc/projects/packaging/python-image-builder/test/: test_builder.py  test_container_image.py
misc/python-clients/docker_client/: pyproject.toml
misc/python-clients/docker_client/docker_client/: __init__.py
misc/python-clients/docker_client/test/: test_docker_client.py
misc/python-clients/openapi_client_generator/: pyproject.toml
misc/python-clients/openapi_client_generator/openapi_client_generator/: ast_conversions.py  ast_model_model.py  generate_single_model_file.py
misc/python-clients/openapi_client_generator/test/: test_ast_conversions.py  test_ast_model_model.py  test_generate_model.py  test_generate_single_model_file.py
misc/python-clients/openapi_client_generator/test/fixtures/: __init__.py  example.py  example_docs.py  example_inner.py
misc/python-clients/openapi_client_generator/test/fixtures/example-specs/: console.openapi.com_oas_en_cap.openapi.json  console.openapi.com_oas_en_visengine.openapi.json  docs.docker.com_reference_api_engine_version_v1.45.converted.json  petstore.swagger.io_v2_swagger.json  petstore3.swagger.io_api_v3_openapi.json  portal.fabrixapi.com_fiberconnect-bvtxh_api_credit-card-validator-tzf03_endpoint.json
misc/python-image-builder/: README.md  pyproject.toml
misc/python-image-builder/python_image_builder/: cli.py  http_requests.py
misc/reinforcement-learning-snake/: build.gradle  gradle.properties
misc/resume-generator-linkedin/: package-lock.json
misc/scratch/learning/python_db/python_db_pg_crud_migrations/: Makefile  compose.yaml  pyproject.toml  run_with_uvicorn.py
misc/scratch/learning/python_db/python_db_pg_crud_migrations/python_db_pg_crud_migrations/: api.py  crud.py  data_point_demo.py  db.py  migrations.py  models.py
misc/scratch/learning/python_db/python_db_pg_crud_migrations/python_db_pg_crud_migrations/alembic_migrations/: env.py
misc/scratch/learning/python_db/python_db_pg_crud_migrations/python_db_pg_crud_migrations/alembic_migrations/sql/: 001_create_category_example_up.sql  002_data_point_demo_up.sql
misc/scratch/learning/python_db/python_db_pg_crud_migrations/python_db_pg_crud_migrations/alembic_migrations/versions/: 001_create_category_example.py  002_data_point_demo.py
misc/scratch/learning/python_db/python_db_pg_crud_migrations/tests/: benchmarks.py  conftest.py  test_categories_api.py  test_data_point_demo.py
misc/socat-logging/: README.txt
misc/totp4j/: build.gradle  pom.xml
misc/zotero/: .gitignore
(+869 files in other folders)
