[project]
name = "json-conv"
version = "0.1.0"
description = ""
authors = [
    { name = "David Ankin", email = "daveankin@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2,<7.0.0",
]

[project.scripts]
json-conv = "json_conv.cli:main"
json2yaml = "json_conv.cli:main"
yaml2json = "json_conv.cli:main"
toml2json = "json_conv.cli:main"
json2toml = "json_conv.cli:main"
json2csv = "json_conv.cli:main"
csv2json = "json_conv.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
