[project]
name = "ipam-simple"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest >= 8.4.1, <8.5",
    "pytest-cov >= 6.2.1, <6.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
