[project]
name = "container-test"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "azure-storage-blob==12.20.0",
    "azure-identity==1.17.1",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
