[project]
name = "python-image-builder"
version = "0.1.0"
description = "constructs oci images in pure python with no infrastructure dependencies"
authors = ["David Ankin <daveankin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

dependencies = [
    "click>=8.1.7,<9.0.0",
    "httpx>=0.27.2,<0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "ruff>=0.6.7,<0.7.0",
    "pytest-httpx>=0.31.2,<0.32.0",
]

[project.scripts]
pib = 'python_image_builder.cli:run'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
