[project]
name = "pyproject"
version = "0.1.0"
description = "pyproject"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.43.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.3",
    "numpy>=1,<2",
    "pandas==2.2.2",
    "tqdm>4,<=5",
    "ray==2.53.0",
    "dash==3.4.0",
    "dash-cytoscape==1.0.2",
    "jupyter==1.1.1",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.2",
    "testcontainers[postgres]==4.14.2",
    "faker>=40",
    "ruff==0.15.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
