[project]
name = "fastapi-alembic-app"
version = "0.1.0"
description = "FastAPI app with Alembic migrations and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest",
    "testcontainers[postgres]",
    "faker",
    "ruff",
    "ty",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
