[project]
name = "org.example.nexus_guide.module1"
version = "0.1.0"
description = "a module which is used for app1"
authors = ["Your Name <you@example.com>"]
license = "UNLICENSED"
readme = "README.md"
packages = [
    { include = "module1" }
]
requires-python = ">= 3.8"

dependencies = [
    "requests >=2, <3"
]

[dependency-groups]
dev = [
"pytest >= 7.4.4, < 7.5"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
